fix: make navbar always visible

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,28 +1,29 @@
 .navbar {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -2rem);
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, -2rem);
+	z-index: 999;
 
-  background: #1d1d1d9e;
-  backdrop-filter: blur(10px);
-  padding: 2rem 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 1rem 1rem #444;
+	background: #1d1d1d9e;
+	backdrop-filter: blur(10px);
+	padding: 2rem 1rem;
+	border-radius: 0.5rem;
+	box-shadow: 0 1rem 1rem #444;
 }
 
 .navbar ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 1.5rem;
+	list-style-type: none;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 1.5rem;
 }
 
 .navbar li {
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 1.6rem;
-  color: whitesmoke;
-  cursor: pointer;
+	text-transform: uppercase;
+	font-weight: 600;
+	font-size: 1.6rem;
+	color: whitesmoke;
+	cursor: pointer;
 }
